crucible-syntax/test-data/simulator-tests/loop.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* in main test-data/simulator-tests/loop.cbl:10:5: nonzero start
    not (eq 0 cx@0:i)
Prove:
  test-data/simulator-tests/loop.cbl:19:5: error: in main
  nonzero
  not (intLe (intSum (intMul 8 cx@0:i)) 0)
PROVED
